Project english_comp_app {
  database_type: 'MySQL'
  Note: 'English Composition Application Database Schema'
}

Table users {
  id char(36) [pk]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  name varchar(100) [not null]
  email_verified boolean [default: false, not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table refresh_tokens {
  id char(36) [pk]
  user_id char(36)
  token_hash varchar(255) [unique, not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table password_reset_tokens {
  id char(36) [pk]
  user_id char(36)
  token_hash varchar(255) [unique, not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table projects {
  id char(36) [pk]
  user_id char(36)
  name varchar(100) [not null]
  description text
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table project_tags {
  id char(36) [pk]
  project_id char(36)
  user_tags_id char(36) [not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table user_tags {
  id char(36) [pk]
  user_id char(36)
  name varchar(30) [not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table question_template_masters {
  id char(36) [pk]
  category_id char(36) [not null]
  question_type varchar(10) [not null]
  english text [not null]
  japanese text [not null]
  status varchar(10) [not null]
  level varchar(10) [not null]
  estimated_time int [not null]
  points int [not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table category_masters {
  id char(36) [pk]
  name varchar(30) [not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table project_questions {
  id char(36) [pk]
  project_id char(36) [not null]
  question_template_master_id char(36) [not null]
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table question_answers {
  id char(36) [pk]
  user_id char(36) [not null]
  project_id char(36) [not null]
  question_template_master_id char(36) [not null]
  user_answer text [null]
  challenge_count int [not null, default: 1] 
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Table correction_results {
  id char(36) [pk]
  question_answer_id char(36) [not null]
  question_template_master_id char(36) [not null]
  get_points int [not null, default: 0]
  example_correction text [null]
  correct_rate int [null]
  advice text [null]
  status varchar(20) [not null, default: 'PROCESSING']
  created_by char(36) [not null]
  updated_by char(36) [not null]
  deleted_by char(36) [null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  deleted_at timestamp [null]
}

Ref: users.id < refresh_tokens.user_id [delete: restrict, update: cascade]
Ref: users.id < password_reset_tokens.user_id [delete: restrict, update: cascade]
Ref: users.id < projects.user_id [delete: restrict, update: cascade]
Ref: users.id < user_tags.user_id [delete: cascade, update: cascade]
Ref: users.id < question_answers.user_id [delete: cascade, update: cascade]
Ref: projects.id < project_tags.project_id [delete: cascade, update: cascade]
Ref: projects.id < question_answers.project_id [delete: cascade, update: cascade]
Ref: user_tags.id < project_tags.user_tags_id [delete: cascade, update: cascade]
Ref: category_masters.id < question_template_masters.category_id [delete: cascade, update: cascade]
Ref: projects.id < project_questions.project_id [delete: cascade, update: cascade]
Ref: question_template_masters.id < project_questions.question_template_master_id [delete: cascade, update: cascade]
Ref: question_template_masters.id < question_answers.question_template_master_id [delete: cascade, update: cascade]
Ref: question_template_masters.id < correction_results.question_template_master_id [delete: cascade, update: cascade]
Ref: question_answers.id < correction_results.question_answer_id [delete: cascade, update: cascade]